--- a/examples/26-color-swatch-refactored/package.json
+++ b/examples/26-color-swatch-refactored/package.json
@@ -23,7 +23,17 @@
     "node-sass": "^5.0.0",
     "typescript": "^4.2.3"
   },
-  "browserslist": [
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app"
+    ]
+  },
+"browserslist": [
     ">0.2%",
     "not dead",
     "not ie <= 11",
